@@ -1,5 +1,11 @@
 2019-04-11  Florian Weimer  <fweimer@redhat.com>
 
+	* resolv/nss_dns/dns-network.c (getanswer_r): Do not replace root
+	domain with empty string.
+	* resolv/nss_dns/dns-host.c (getanswer_r): Likewise.
+
+2019-04-11  Florian Weimer  <fweimer@redhat.com>
+
 	* include/alloc_buffer.h (alloc_buffer_alloc_bytes): Update
 	comment.
 	(alloc_buffer_next): Change return type to non-const.  Update
